Closed
Bug 1476313
Opened 7 years ago
Closed 7 years ago
[Static Analysis] DEAD_STORE error in xpcom/reflect/xptcall/md/unix/xptcstubs_x86_64_linux.cpp
Categories
(Core :: XPCOM, defect, P3)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox63 | --- | fixed |
People
(Reporter: rbartlensky, Assigned: rbartlensky)
References
Details
Attachments
(1 file)
xpcom/reflect/xptcall/md/unix/xptcstubs_x86_64_linux.cpp:41: error: DEAD_STORE
The value written to &result (type int) is never used.
39. uint32_t paramCount;
40. uint32_t i;
41. > nsresult result = NS_ERROR_FAILURE;
42.
43. NS_ASSERTION(self,"no self");
Comment 1•7 years ago
|
||
Please change the other bazillion stubs files if you change this, so they stay a little more in sync.
eg almost everything from this search result:
https://searchfox.org/mozilla-central/search?q=nsresult+result&case=false®exp=false&path=xpcom%2F
| Comment hidden (mozreview-request) |
Comment 3•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8993289 [details]
Bug 1476313: Fix DEAD_STORE errors in xpcom/reflect/xptcall/md/unix/*.
https://reviewboard.mozilla.org/r/258068/#review265128
Please also fix the three occurences of this in xpcom/reflect/xptcall/md/win32/. Thanks.
Attachment #8993289 -
Flags: review?(continuation) → review+
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 5•7 years ago
|
||
Is my latest addition fine? It works on try.
Flags: needinfo?(continuation)
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by csabou@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e2374353593c
Fix DEAD_STORE errors in xpcom/reflect/xptcall/md/unix/*. r=mccr8
Keywords: checkin-needed
Comment 8•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•