Bug 1476313: Fix DEAD_STORE errors in xpcom/reflect/xptcall/md/unix/*. r=mccr8

MozReview-Commit-ID: 29GpsKzXQhq