xpcom/reflect/xptcall/md/unix/xptcstubs_ppc_linux.cpp
@@ -42,7 +42,6 @@ PrepareAndDispatch(nsXPTCStubBase* self,
     const nsXPTMethodInfo* info = nullptr;
     uint32_t paramCount;
     uint32_t i;
-    nsresult result = NS_ERROR_FAILURE;
 
     NS_ASSERTION(self,"no self");
 
@@ -163,9 +162,9 @@ PrepareAndDispatch(nsXPTCStubBase* self,
         }
     }
 
-    result = self->mOuter->CallMethod((uint16_t)methodIndex,
-                                      info,
-                                      dispatchParams);
+    nsresult result = self->mOuter->CallMethod((uint16_t)methodIndex,
+                                               info,
+                                               dispatchParams);
 
     if (dispatchParams != paramBuffer)
         delete [] dispatchParams;
