xpcom/reflect/xptcall/md/unix/xptcstubs_ppc_netbsd.cpp
@@ -40,7 +40,6 @@ PrepareAndDispatch(nsXPTCStubBase* self,
     const nsXPTMethodInfo* info;
     uint32_t paramCount;
     uint32_t i;
-    nsresult result = NS_ERROR_FAILURE;
 
     NS_ASSERTION(self,"no self");
 
@@ -147,7 +146,8 @@ PrepareAndDispatch(nsXPTCStubBase* self,
         }
     }
 
-    result = self->CallMethod((uint16_t) methodIndex, info, dispatchParams);
+    nsresult result = self->CallMethod((uint16_t) methodIndex, info,
+                                       dispatchParams);
 
     if (dispatchParams != paramBuffer)
         delete [] dispatchParams;
